testsuite/tests/typecheck/should_fail/T7869.stderr

T7869.hs:3:12: error:
    • Couldn't match type ‘a’ with ‘a1’
        because type variable ‘a1’ would escape its scope
      This (rigid, skolem) type variable is bound by
        an expression type signature:
          [a1] -> b1
        at T7869.hs:3:5-27
      Expected type: [a1] -> b1
        Actual type: [a] -> b
    • In the expression: f x
      In the expression: (\ x -> f x) :: [a] -> b
      In an equation for ‘f’: f = (\ x -> f x) :: [a] -> b
    • Relevant bindings include
        x :: [a1] (bound at T7869.hs:3:7)
        f :: [a] -> b (bound at T7869.hs:3:1)
